test/sema/main_redeclared.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
fn main() -> void {
}

// CHECK: [[# @LINE + 1 ]]:1: error: redeclaration of 'main'
fn main() -> void {
}

// CHECK-NOT: {{.*}}